--- a/components/app_component/app/views/app_component/welcome/index.html.slim
+++ b/components/app_component/app/views/app_component/welcome/index.html.slim
@@ -3,6 +3,6 @@ p Predincting the outcome of matches since 2015
 
 = link_to "Manage Teams", teams_path
 | &nbsp;|&nbsp;
-= link_to "Manage Games", games_path
+= link_to "Manage Games", '/games_admin/games'
 | &nbsp;|&nbsp;
 = link_to "Predict on outcome!", new_prediction_path
