--- a/components/app_component/app/views/layouts/app_component/application.html.slim
+++ b/components/app_component/app/views/layouts/app_component/application.html.slim
@@ -17,7 +17,7 @@ html
         ul.title-area
           li.name
             h1
-              = link_to root_path do
+              = link_to('/') do
 
                 = image_tag "app_component/logo.png", width: "25px"
 
@@ -29,9 +29,9 @@ html
 
         section.top-bar-section
           ul.left
-            li =link_to "Teams", teams_path
-            li =link_to "Games", games_path
-            li =link_to "Predictions", new_prediction_path
+            li =link_to "Teams", '/app_component/teams'
+            li =link_to "Games", '/games_admin/games'
+            li =link_to "Predictions", '/app_component/predictions/new'
 
   main
     .row
