--- a/components/app_component/app/views/layouts/app_component/application.html.slim
+++ b/components/app_component/app/views/layouts/app_component/application.html.slim
@@ -30,7 +30,7 @@ html
         section.top-bar-section
           ul.left
             li =link_to "Teams", '/app_component/teams'
-            li =link_to Rails.application.config.main_nav[:games][:name], Rails.application.config.main_nav[:games][:link].call
+            li =link_to "Games", '/games_admin/games'
             li =link_to "Predictions", '/app_component/predictions/new'
 
   main
